--- a/Animacion/CMakeLists.txt
+++ b/Animacion/CMakeLists.txt
@@ -1,12 +1,12 @@
 #Especificar donde se encuentran los ficheros cpp a compilar
-target_sources(libModulos PRIVATE
+target_sources(libClases PRIVATE
     "${CMAKE_CURRENT_SOURCE_DIR}/Player.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Animacion.cpp"
     
 )
 
 #Y donde se encuentran los .h
-target_include_directories(libModulos PUBLIC 
+target_include_directories(libClases PUBLIC 
 "${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
