--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,28 @@
 cmake_minimum_required(VERSION 3.1)
-project(ranJamp)
+project(Pengo)
 
 #Añadir tantos subdirectorios como se necesiten
 #En cada subdirectorio debe haber un fichero CMakeLists.txt
 #Habitualmente cada subdirectorio determinará una libreria 
-add_library(libModulos STATIC)
-add_subdirectory(ej_modulos)
+add_library(libClases STATIC)
+add_subdirectory(Animacion)
+add_subdirectory(Juego)
+add_subdirectory(mapaxml)
+
 
 #Opciones a pasar al compilador de C++
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")
 #Se desea generar un ejecutable, se especifica donde está el main
 #y ficheros que aporten código que no sean librerias o subcarpetas 
 add_executable(Pengo main.cpp)
-add_subdirectory(Animacion)
+
 
 
 
 #Añadir todos los objetos (ficheros o) que requiera el ejecutable. 
 #Habitualmente todas las librerias definidas mediante subcarpetas
 #aportaran código
-target_link_libraries(Pengo libModulos)
+target_link_libraries(Pengo libClases)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
 #Para usar SFML
